fix(dropdown): optional show a scrollhint on firefox modbile devices

--- a/src/definitions/modules/dropdown.less
+++ b/src/definitions/modules/dropdown.less
@@ -609,36 +609,45 @@ select.ui.dropdown {
     box-shadow: none !important;
   }
   & when (@variationDropdownScrollhint) {
-    @supports (-webkit-overflow-scrolling: touch) {
-      /* CSS specific to iOS devices only  */
+    /* CSS specific to iOS devices only  */
+    @supports (-webkit-touch-callout: none) {
       .ui.selection.dropdown .scrollhint.menu:not(.hidden):before {
-        content: '';
-        z-index: @scrollhintZIndex;
-        display: block;
-        position: absolute;
-        opacity: 0;
-        right: 0;
-        top: 0;
-        height: 100%;
-        border-right: @scrollhintRightBorder;
-        border-left: @scrollhintLeftBorder;
         animation: scrollhint @scrollhintDuration @scrollhintEasing @scrollhintIteration;
-        border-image: linear-gradient(to bottom, @scrollhintStartColor, @scrollhintEndColor) 1 100%;
       }
-
-      .ui.inverted.selection.dropdown .scrollhint.menu:not(.hidden):before {
-        border-image: linear-gradient(to bottom, @invertedScrollhintStartColor, @invertedScrollhintEndColor) 1 100%;
+    }
+    /* CSS specific to Firefox mobile only  */
+    @media (-moz-touch-enabled) {
+      .ui.selection.dropdown .scrollhint.menu:not(.hidden):before {
+        animation: scrollhint @scrollhintDuration @scrollhintEasing @scrollhintIteration;
       }
+    }
 
-      @keyframes scrollhint {
-        0% {
-          opacity: 1;
-          top: 100%;
-        }
-        100% {
-          opacity: 0;
-          top: 0;
-        }
+    .ui.selection.dropdown .scrollhint.menu:not(.hidden):before {
+      content: '';
+      z-index: @scrollhintZIndex;
+      display: block;
+      position: absolute;
+      opacity: 0;
+      right: 0;
+      top: 0;
+      height: 100%;
+      border-right: @scrollhintRightBorder;
+      border-left: @scrollhintLeftBorder;
+      border-image: linear-gradient(to bottom, @scrollhintStartColor, @scrollhintEndColor) 1 100%;
+    }
+
+    .ui.inverted.selection.dropdown .scrollhint.menu:not(.hidden):before {
+      border-image: linear-gradient(to bottom, @invertedScrollhintStartColor, @invertedScrollhintEndColor) 1 100%;
+    }
+
+    @keyframes scrollhint {
+      0% {
+        opacity: 1;
+        top: 100%;
+      }
+      100% {
+        opacity: 0;
+        top: 0;
       }
     }
   }
